2008-06-16  Fate  <fate.tmw@googlemail.com>

	* player_relations.h: Allow whispers by default.

2008-06-14  David Athay  <ko2fan@gmail.com>

	* src/gui/shop.cpp, src/gui/browserbox.cpp, src/net/tradehandler.cpp:
	Fixed compilation errors. Fixed trade bug (although a little hacky
	right now).
	* src/net/tradehandler.cpp: Changed bug fix as requested by Bjørn.

2008-06-08  Fate  <fate.tmw@googlemail.com>

	* src/gui/table.cpp: Invalidate mTopWidget whenever the model is
	regenerated to reflect that we have no current valid selection.
	* src/player_relations.cpp: Proper handling of case where player, to
	apply ignore strategy to, is NULL.

2008-06-05  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp, src/gui/setup_video.cpp: Lowered default particle
	detail level.

2008-06-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/gui/updatewindow.h, src/main.cpp,
	src/resources/buddylist.cpp, src/resources/spritedef.cpp,
	src/resources/resourcemanager.cpp: Added command line argument to
	specify the update host (-H). Also, to avoid problems when files with
	the same name are served by different update hosts, the updates are
	now stored in an update host specific directory. Based on a patch by
	Sanga.

2008-06-04  Lloyd Bryant  <lloyd_bryant@netzero.net>

	* src/net/charserverhandler.cpp: Display shield sprite also in
	character select window.

2008-05-30  Lloyd Bryant  <lloyd_bryant@netzero.net>

	* src/net/equipmenthandler.cpp, src/net/beinghandler.cpp,
	src/net/protocol.h, src/being.h: Merged handling for eAthena packets
	0x00c3 and 0x01d7 and added support for displaying a shield sprite.

2008-05-28  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp: Changed the way particle emitter skip is handled
	to make linear and circular emitters work with particleEmitterSkip
	enabled.
	* src/gui/setup.cpp, src/gui/setup_video.cpp, src/gui/setup_video.h:
	Added slider for controlling particleEmitterSkip (overall quality of